Working on repo detail

--- a/GitWatch/Base.lproj/Main.storyboard
+++ b/GitWatch/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -425,7 +426,7 @@
                                 </variation>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yTd-A3-1Sr">
-                                <rect key="frame" x="20" y="193" width="560" height="29"/>
+                                <rect key="frame" x="20" y="229" width="560" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="22y-A3-0Ys"/>
                                 </constraints>
@@ -434,6 +435,30 @@
                                     <segment title="Pull Request"/>
                                 </segments>
                             </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Show in red if not updated for " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UTD-QA-Xfl">
+                                <rect key="frame" x="20" y="195" width="178" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="178" id="RAj-5x-CwR"/>
+                                    <constraint firstAttribute="height" constant="16" id="Vre-gC-4Jj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="7" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q5K-Uz-h7n">
+                                <rect key="frame" x="196" y="181" width="41" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="41" id="uMX-A9-JL7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" misplaced="YES" text="days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBi-oR-u79">
+                                <rect key="frame" x="245" y="196" width="30" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -442,27 +467,36 @@
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="1x5-31-Z6S"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="28" id="35j-aP-1ZK"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="8yh-dA-QqA" secondAttribute="bottom" constant="477" id="7jy-xU-dd1"/>
+                            <constraint firstItem="UTD-QA-Xfl" firstAttribute="firstBaseline" secondItem="QBi-oR-u79" secondAttribute="baseline" constant="-2" id="856-6m-lKN"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="top" id="AG3-bI-pSI"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="top" id="Dpd-tP-xiP"/>
+                            <constraint firstItem="UTD-QA-Xfl" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="23" id="Efh-tZ-DHB"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="428" id="Hz0-I4-BDc"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="centerY" secondItem="Pyh-eM-5bn" secondAttribute="centerY" id="JGk-AZ-Vb1"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="leading" id="Jie-tv-ikf"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="Jqi-8E-Mif"/>
+                            <constraint firstItem="QBi-oR-u79" firstAttribute="leading" secondItem="UTD-QA-Xfl" secondAttribute="trailing" constant="47" id="Kk2-WJ-pxU"/>
                             <constraint firstItem="yTd-A3-1Sr" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="LAH-De-PlV"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="top" secondItem="UTD-QA-Xfl" secondAttribute="bottom" constant="18" id="Ppf-vZ-za0"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="RDr-SW-lf7"/>
                             <constraint firstItem="yTd-A3-1Sr" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="Rna-MJ-R6h"/>
                             <constraint firstItem="yTd-A3-1Sr" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="T5U-aR-gWA"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="8" id="TWM-gm-QAf"/>
                             <constraint firstItem="ZWK-sc-Zfq" firstAttribute="top" secondItem="I7V-N0-sIu" secondAttribute="bottom" constant="8" symbolic="YES" id="U16-UH-vnQ"/>
                             <constraint firstItem="Pyh-eM-5bn" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="21" id="UF6-Ik-cdt"/>
+                            <constraint firstItem="Q5K-Uz-h7n" firstAttribute="baseline" secondItem="QBi-oR-u79" secondAttribute="firstBaseline" constant="-7" id="UgV-ye-axv"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="Pyh-eM-5bn" secondAttribute="bottom" constant="470" id="WdN-Dw-BKx"/>
+                            <constraint firstItem="QBi-oR-u79" firstAttribute="leading" secondItem="Q5K-Uz-h7n" secondAttribute="trailing" constant="8" symbolic="YES" id="XWh-ys-lUI"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="498" id="aHL-Qt-a5q"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="8" symbolic="YES" id="brs-wI-BqM"/>
                             <constraint firstItem="yTd-A3-1Sr" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="cbp-iL-4hR"/>
+                            <constraint firstItem="UTD-QA-Xfl" firstAttribute="firstBaseline" secondItem="Q5K-Uz-h7n" secondAttribute="baseline" id="cgA-Tb-vHA"/>
                             <constraint firstItem="yTd-A3-1Sr" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="21" id="ci1-Ca-tot"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="d1G-KF-b8g"/>
                             <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="428" id="fC2-Sg-cJz"/>
+                            <constraint firstItem="Q5K-Uz-h7n" firstAttribute="baseline" secondItem="UTD-QA-Xfl" secondAttribute="firstBaseline" constant="-6" id="fLu-qK-KU1"/>
                             <constraint firstItem="dCe-5g-y5E" firstAttribute="leading" secondItem="ZWK-sc-Zfq" secondAttribute="trailing" constant="8" symbolic="YES" id="fl5-7j-BH6"/>
+                            <constraint firstItem="UTD-QA-Xfl" firstAttribute="leading" secondItem="yTd-A3-1Sr" secondAttribute="leading" id="ibt-8Q-dTc"/>
                             <constraint firstItem="eDb-t0-09t" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="51" id="jH2-15-pXW"/>
                             <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="8" symbolic="YES" id="kDy-dl-jem"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dCe-5g-y5E" secondAttribute="trailing" constant="10" id="llM-Bd-BIb"/>
@@ -477,6 +511,8 @@
                                 <exclude reference="1x5-31-Z6S"/>
                                 <exclude reference="UF6-Ik-cdt"/>
                                 <exclude reference="yfd-4n-uj2"/>
+                                <exclude reference="cgA-Tb-vHA"/>
+                                <exclude reference="ci1-Ca-tot"/>
                                 <exclude reference="35j-aP-1ZK"/>
                                 <exclude reference="TWM-gm-QAf"/>
                                 <exclude reference="brs-wI-BqM"/>
@@ -494,6 +530,7 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="DaysInterval" destination="Q5K-Uz-h7n" id="Taw-ht-hxr"/>
                         <outlet property="IssuesLabel" destination="eDb-t0-09t" id="nO0-hr-aUC"/>
                         <outlet property="RepoDescription" destination="Pyh-eM-5bn" id="uoj-0r-eju"/>
                         <outlet property="RepoIcon" destination="ZWK-sc-Zfq" id="7kI-Ud-Xga"/>
